# EOS

./: EOS.py  ID_create.py  LICENSE  LPP_data_setup.py  MANIFEST.in  README.md  construct_performance_df.py  distance_matrix.py  easy_funcs.py  electre.py  electre_parallel.py  gen_locoations.py  main_functions.py  plot_requests.py  pyproject.toml  schedule_rel_criteria.py  scipy_sparce_to_spmatrix.py  setup.cfg  setup.py  world_gen_data.py  worldloc.xlsx
