[metadata]
name = EOSpython
version = 0.0.1
author = Alex Vasegaard
author_email = aev@mp.aau.dk
description = A set of functions encompassing a centralized Earth Observation Satellite scheduling system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexVasegaard/EOS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
